@@ -2,6 +2,7 @@ kickseed (0.54) UNRELEASED; urgency=low
 
   * Add Vcs-Svn field.
   * Add notes about why templates are untranslatable.
+  * Only preseed partman-lvm/confirm if the logvol command was used.
 
  -- Colin Watson <cjwatson@debian.org>  Sat, 15 Aug 2009 11:08:52 +0100
 
